--- a/Trabalho_Grau_B_Alessandro_Tyska.ipynb
+++ b/Trabalho_Grau_B_Alessandro_Tyska.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPZQjiBzhx50QnuEL/UOPXm",
+      "authorship_tag": "ABX9TyPQQbUKwU/YKYESy9GbLlpP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,13 +42,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Mx0wbLr84C1a",
-        "outputId": "21d1bbb8-f63b-4813-f983-0cfbf9f4e49e",
+        "outputId": "b36d4e45-77e6-4b07-bf8c-0b6d621d7709",
         "cellView": "form"
       },
       "outputs": [
@@ -91,37 +91,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "12rhLMsC5nuj",
-        "outputId": "3b2a42f8-a274-4edb-f8ba-8abfd5cc926b",
+        "outputId": "12d95f25-8461-4054-c116-f3c495e233c8",
         "cellView": "form"
       },
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Downloading from https://www.kaggle.com/api/v1/datasets/download/mahdiislam/colorectal-cancer-wsi?dataset_version_number=1...\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "100%|██████████| 264M/264M [00:01<00:00, 143MB/s]"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Extracting files...\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "\n"
+            "Using Colab cache for faster access to the 'colorectal-cancer-wsi' dataset.\n"
           ]
         }
       ]
@@ -178,7 +157,7 @@
         "id": "JWHEkcT757EM",
         "cellView": "form"
       },
-      "execution_count": 8,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -191,31 +170,31 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lXyiTyfJvnnp",
-        "outputId": "fc211b49-2370-44c1-e947-82dd09d62d80"
+        "outputId": "86fbfbea-a205-49fe-de54-16c34431bd9e"
       },
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "EBHI-SEG/\n",
-            "    Adenocarcinoma/\n",
+            "    High-grade IN/\n",
             "        label/\n",
             "        image/\n",
             "    Normal/\n",
             "        label/\n",
             "        image/\n",
-            "    Low-grade IN/\n",
+            "    Adenocarcinoma/\n",
             "        label/\n",
             "        image/\n",
             "    Serrated adenoma/\n",
             "        label/\n",
             "        image/\n",
-            "    High-grade IN/\n",
+            "    Polyp/\n",
             "        label/\n",
             "        image/\n",
-            "    Polyp/\n",
+            "    Low-grade IN/\n",
             "        label/\n",
             "        image/\n"
           ]
@@ -229,43 +208,35 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 304
         },
         "id": "AQAzjfvzvrEC",
-        "outputId": "e67d0245-cbc4-4ba2-ed51-745118908bd0"
+        "outputId": "3c4820fa-1d9e-4b44-fcf7-bb01cc64866e"
       },
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Processing: Adenocarcinoma\n",
-            "  - Removed label folder\n",
-            "  - Moved images to Adenocarcinoma/\n",
-            "  - Removed image folder\n",
-            "Processing: Normal\n",
-            "  - Removed label folder\n",
-            "  - Moved images to Normal/\n",
-            "  - Removed image folder\n",
-            "Processing: Low-grade IN\n",
-            "  - Removed label folder\n",
-            "  - Moved images to Low-grade IN/\n",
-            "  - Removed image folder\n",
-            "Processing: Serrated adenoma\n",
-            "  - Removed label folder\n",
-            "  - Moved images to Serrated adenoma/\n",
-            "  - Removed image folder\n",
-            "Processing: High-grade IN\n",
-            "  - Removed label folder\n",
-            "  - Moved images to High-grade IN/\n",
-            "  - Removed image folder\n",
-            "Processing: Polyp\n",
-            "  - Removed label folder\n",
-            "  - Moved images to Polyp/\n",
-            "  - Removed image folder\n",
-            "\n",
-            "Restructuring complete.\n"
+            "Processing: High-grade IN\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "OSError",
+          "evalue": "[Errno 30] Read-only file system: '/kaggle/input/colorectal-cancer-wsi/EBHI-SEG/High-grade IN/label'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mOSError\u001b[0m                                   Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-4289793895.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mrestructure_dataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mKAGGLE_DATASET_PATH\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m/tmp/ipython-input-278323972.py\u001b[0m in \u001b[0;36mrestructure_dataset\u001b[0;34m(root_path)\u001b[0m\n\u001b[1;32m     23\u001b[0m             \u001b[0mlabel_dir\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mclass_dir\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'label'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexists\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlabel_dir\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 25\u001b[0;31m                 \u001b[0mshutil\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrmtree\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlabel_dir\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     26\u001b[0m                 \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"  - Removed label folder\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/lib/python3.12/shutil.py\u001b[0m in \u001b[0;36mrmtree\u001b[0;34m(path, ignore_errors, onerror, onexc, dir_fd)\u001b[0m\n\u001b[1;32m    757\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    758\u001b[0m             \u001b[0;32mwhile\u001b[0m \u001b[0mstack\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 759\u001b[0;31m                 \u001b[0m_rmtree_safe_fd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstack\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0monexc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    760\u001b[0m         \u001b[0;32mfinally\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    761\u001b[0m             \u001b[0;31m# Close any file descriptors still on the stack.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/lib/python3.12/shutil.py\u001b[0m in \u001b[0;36m_rmtree_safe_fd\u001b[0;34m(stack, onexc)\u001b[0m\n\u001b[1;32m    701\u001b[0m     \u001b[0;32mexcept\u001b[0m \u001b[0mOSError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    702\u001b[0m         \u001b[0merr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfilename\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpath\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 703\u001b[0;31m         \u001b[0monexc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfunc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpath\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    704\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    705\u001b[0m _use_fd_functions = ({os.open, os.stat, os.unlink, os.rmdir} <=\n",
+            "\u001b[0;32m/usr/lib/python3.12/shutil.py\u001b[0m in \u001b[0;36m_rmtree_safe_fd\u001b[0;34m(stack, onexc)\u001b[0m\n\u001b[1;32m    698\u001b[0m                 \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munlink\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mentry\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdir_fd\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtopfd\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    699\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mOSError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 700\u001b[0;31m                 \u001b[0monexc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munlink\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfullname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    701\u001b[0m     \u001b[0;32mexcept\u001b[0m \u001b[0mOSError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    702\u001b[0m         \u001b[0merr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfilename\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpath\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/lib/python3.12/shutil.py\u001b[0m in \u001b[0;36m_rmtree_safe_fd\u001b[0;34m(stack, onexc)\u001b[0m\n\u001b[1;32m    696\u001b[0m                 \u001b[0;32mpass\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    697\u001b[0m             \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 698\u001b[0;31m                 \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munlink\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mentry\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdir_fd\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtopfd\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    699\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mOSError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    700\u001b[0m                 \u001b[0monexc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munlink\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfullname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mOSError\u001b[0m: [Errno 30] Read-only file system: '/kaggle/input/colorectal-cancer-wsi/EBHI-SEG/High-grade IN/label'"
           ]
         }
       ]
@@ -276,28 +247,10 @@
         "print_dataset_folder_structure(KAGGLE_DATASET_PATH)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "87t2OnZkvt8O",
-        "outputId": "d5f2f8e5-4153-4920-f6b0-12989721a6b3"
+        "id": "87t2OnZkvt8O"
       },
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "EBHI-SEG/\n",
-            "    Adenocarcinoma/\n",
-            "    Normal/\n",
-            "    Low-grade IN/\n",
-            "    Serrated adenoma/\n",
-            "    High-grade IN/\n",
-            "    Polyp/\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -305,35 +258,29 @@
         "from torchvision.datasets import ImageFolder\n",
         "from torchvision import transforms\n",
         "\n",
-        "dataset = ImageFolder(KAGGLE_DATASET_PATH, transform=transforms.ToTensor())"
+        "transforms_compose = transforms.Compose([\n",
+        "    transforms.ToTensor(),\n",
+        "    transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225])\n",
+        "])\n",
+        "\n",
+        "dataset = ImageFolder(KAGGLE_DATASET_PATH, transform=transforms_compose)"
       ],
       "metadata": {
         "id": "3b1gXy9nv9AR"
       },
-      "execution_count": 9,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "PiF1Jcy1wgWn"
-      },
       "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "rwnI35HIwgUc"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
+      "source": [
+        "import torch\n",
+        "\n",
+        "train_size = int(0.8 * len(dataset))\n",
+        "val_size = len(dataset) - train_size\n",
+        "\n",
+        "train_dataset, val_dataset = torch.utils.data.random_split(dataset, [train_size, val_size])"
+      ],
       "metadata": {
         "id": "mTGeJIlpwgSH"
       },
@@ -342,28 +289,37 @@
     },
     {
       "cell_type": "code",
-      "source": [],
       "metadata": {
-        "id": "B2ShsH1QwgLP"
+        "id": "af670c80"
       },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "gO-JiliWwgF5"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "lRPwjskEwf-v"
-      },
+      "source": [
+        "import pandas as pd\n",
+        "\n",
+        "# Prepare data for DataFrame\n",
+        "summary_data = []\n",
+        "for class_name in class_names:\n",
+        "    total_count = total_class_counts.get(class_name, 0)\n",
+        "    train_count = train_class_counts.get(class_name, 0)\n",
+        "    val_count = val_class_counts.get(class_name, 0)\n",
+        "\n",
+        "    train_percentage = (train_count / total_count * 100) if total_count > 0 else 0\n",
+        "    val_percentage = (val_count / total_count * 100) if total_count > 0 else 0\n",
+        "\n",
+        "    summary_data.append({\n",
+        "        'Class': class_name,\n",
+        "        'Total Samples': total_count,\n",
+        "        'Train Samples': train_count,\n",
+        "        'Train % of Total': f\"{train_percentage:.2f}%\",\n",
+        "        'Validation Samples': val_count,\n",
+        "        'Validation % of Total': f\"{val_percentage:.2f}%\"\n",
+        "    })\n",
+        "\n",
+        "# Create DataFrame\n",
+        "df_summary = pd.DataFrame(summary_data)\n",
+        "\n",
+        "print(\"Class Distribution Summary:\")\n",
+        "print(df_summary.to_markdown(index=False))\n"
+      ],
       "execution_count": null,
       "outputs": []
     }
